# SDL_Project

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt  temp
data/: MetaLearningDataset.py  dataloader.py  global_prototypes.pth  protonet_har_model.pth
model/: arch.py  protonetTrainer.py
tests/: dataTest.py  inputTest.py  modelTest.py
utils/: classify_queries.py  classify_with_global_prototypes.py  compute_global_prototypes.py  compute_prototypes.py  load_global_prototypes.py  load_model.py  plot_confusion_matrix.py  plot_training_history.py  predict_single_sample.py  save_global_prototypes.py  test_model.py  train_model.py
